# SearchProblem

./: AStarsearch.h  BFS.h  BestFirstSearch.h  Boot.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.h  FileCacheManager.cpp  FileCacheManager.h  MatrixProblem.h  MatrixProblemCreator.h  MyParallelServer.cpp  MyParallelServer.h  MySearcher.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  ObjectAdapter.h  README.md  SearchClientHandler.h  Searchable.h  SearchableCreator.h  Searcher.h  Server.h  Solver.h  State.h  StringReverser.cpp  StringReverser.h  main.cpp
